--- a/farmstory/css/style.css
+++ b/farmstory/css/style.css
@@ -12,6 +12,13 @@ a       {text-decoration: none; color:#111;}
 
 /* 고정배너 만들기 - 위치를 퍼센티지로 두고 마진을 잡는다 */
 
+.bx-wrapper {
+   -moz-box-shadow: none;
+   -webkit-box-shadow: none;
+   box-shadow: none;
+   border: 0;
+ }
+ 
 /* wrapper */
 #wrapper {
    width: 980px;
