--- a/dmall/css/style_main.css
+++ b/dmall/css/style_main.css
@@ -12,10 +12,9 @@ section > div > article {}
 /* 슬라이드 이미지 사이드 색 추출용 캔버스 */
 .main_slider > canvas {display: none;}
 .main_slider article {}
-.main_slider .main_slider_bottom {
-    overflow: hidden;
-}
-.main_slider .main_slider_bottom ul {}
+.main_slider .main_slider_bottom {}
+/* 자식요소에 float를 주었으면 overflow를 해줘야 높이값이 생성된다 주의 */
+.main_slider .main_slider_bottom ul {overflow: hidden;}
 .main_slider .main_slider_bottom ul li {
     float: left;
     display: block;
@@ -29,10 +28,7 @@ section > div > article {}
 }
 
 .sub_slider {}
-/* 자식요소에 float를 주었으면 overflow를 해줘야 높이값이 생성된다 주의 */
-.sub_slider article {
-    overflow: hidden;
-}
+.sub_slider article {overflow: hidden;}
 .sub_slider article div {
     float: left;
     width: 340px;
@@ -127,45 +123,94 @@ section > div > article {}
 
 /* 중앙상품란 */
 .main_promotion {}
-.main_promotion article {
-    position: relative;
-}
+.main_promotion article {position: relative;}
 .main_promotion article div {
     background-color: #f1f1f1;
-    overflow: hidden;
 }
 /* 중앙상품란 우측 메뉴 */
 .main_promotion article div.right {
-    border:1px solid red;
     position: absolute;
     top: 32px;
     right: 32px;
     width: 291px;
     height: 291px;
 }
-.main_promotion .right ul {}
-.main_promotion .right ul li {}
-
+.main_promotion .right ul {overflow: hidden;}
+.main_promotion .right ul li {
+    float: left;
+    width: 95px;
+    height: 95px;
+    line-height: 0px;
+    font-size: 0px;
+    margin-right: 2px;
+    margin-bottom: 2px;
+}
+.main_promotion .right ul li:nth-of-type(1) {background-image: url(/dmall/img/btns/main_promo_btn_010.jpg);}
+.main_promotion .right ul li:nth-of-type(2) {background-image: url(/dmall/img/btns/main_promo_btn_020.jpg);}
+.main_promotion .right ul li:nth-of-type(3) {background-image: url(/dmall/img/btns/main_promo_btn_030.jpg);}
+.main_promotion .right ul li:nth-of-type(4) {background-image: url(/dmall/img/btns/main_promo_btn_040.jpg);}
+.main_promotion .right ul li:nth-of-type(5) {background-image: url(/dmall/img/btns/main_promo_btn_050.jpg);}
+.main_promotion .right ul li:nth-of-type(6) {background-image: url(/dmall/img/btns/main_promo_btn_060.jpg);}
+.main_promotion .right ul li:nth-of-type(7) {background-image: url(/dmall/img/btns/main_promo_btn_070.jpg);}
+.main_promotion .right ul li:nth-of-type(8) {background-image: url(/dmall/img/btns/main_promo_btn_080.jpg);}
+.main_promotion .right ul li:nth-of-type(9) {background-image: url(/dmall/img/btns/main_promo_btn_090.jpg);}
+.main_promotion .right ul li:nth-of-type(1):hover {background-image: url(/dmall/img/btns/main_promo_btn_01.jpg);}
+.main_promotion .right ul li:nth-of-type(2):hover {background-image: url(/dmall/img/btns/main_promo_btn_02.jpg);}
+.main_promotion .right ul li:nth-of-type(3):hover {background-image: url(/dmall/img/btns/main_promo_btn_03.jpg);}
+.main_promotion .right ul li:nth-of-type(4):hover {background-image: url(/dmall/img/btns/main_promo_btn_04.jpg);}
+.main_promotion .right ul li:nth-of-type(5):hover {background-image: url(/dmall/img/btns/main_promo_btn_05.jpg);}
+.main_promotion .right ul li:nth-of-type(6):hover {background-image: url(/dmall/img/btns/main_promo_btn_06.jpg);}
+.main_promotion .right ul li:nth-of-type(7):hover {background-image: url(/dmall/img/btns/main_promo_btn_07.jpg);}
+.main_promotion .right ul li:nth-of-type(8):hover {background-image: url(/dmall/img/btns/main_promo_btn_08.jpg);}
+.main_promotion .right ul li:nth-of-type(9):hover {background-image: url(/dmall/img/btns/main_promo_btn_09.jpg);}
 
 /* 중앙상품란 하단 슬라이더 */
-.main_promotion article div.slider > dl {
+.main_promotion article > div.slider {
+    width: 100%;
+    display: block;
+    position: absolute;
+    padding: 10px 0;
+    left: 0;
+    background: #f1f1f1;
+}
+/* 슬라이더 양쪽 꺽쇠 */
+.main_promotion article div.slider > span {
+    display: block;
+    position: absolute;
+    width:23px;
+    height:40px;
+    top: 40%;
+    font-size: 0;
+    border:1px solid red;
+}
+.main_promotion article div.slider > span.front {left:0;}
+.main_promotion article div.slider > span.back {right:0;}
+/* 슬라이더 본문 */
+.main_promotion article div.slider > div {
+    display: block;
+    height: 250px;
+    width: 992px;
+    margin: 0px auto;
+}
+.main_promotion article div.slider dl {
     float: left;
     width: 190px;
     margin-right: 10px;
 }
-.main_promotion .slider > dl > dt {
+.main_promotion article div.slider dl:last-of-type {margin:0;}
+.main_promotion .slider dl dt {
     position: relative;
     margin-bottom: 20px;
 }
-.main_promotion .slider > dl > dt > a {}
-/* 베스트 상품 표기 */
-.main_promotion .slider > dl > dt > span {
+.main_promotion .slider dl > dt > a {}
+/* 슬라이더 내 베스트 표기 */
+.main_promotion .slider dl > dt > span {
     position: absolute;
     top: -5px;
     left: 0px;
     z-index: 9990;
 }
-.main_promotion .slider > dl > dt > span > strong {
+.main_promotion .slider dl > dt > span > strong {
     color: #fff;
     text-align: center;
     width: 100%;
@@ -174,34 +219,53 @@ section > div > article {}
     bottom: 11px;
     left: 4px;
 }
-.main_promotion .slider > dl > dd {
+.main_promotion .slider dl > dd {
     padding: 0px 2px;
     margin-top: 17px;
 }
-.main_promotion .slider > dl > dd > ul {}
-.main_promotion .slider > dl > dd > ul > li {}
-.main_promotion .slider > dl > dd > ul > li.cut_text {
+.main_promotion .slider dl > dd > ul {}
+.main_promotion .slider dl > dd > ul > li {}
+.main_promotion .slider li.cut_text {
     color: #000;
     margin-bottom: 7px;
 }
-.main_promotion .slider > dd > dl > ul > li.price {
-    color: #000;
-}
-
-
-
-
+.main_promotion .slider li.price {color: #000;}
+.main_promotion .slider li.price > strong {font-weight: bold;}
 
 .line_banner_03 {}
 .line_banner_03 article {}
 .line_banner_03 article a {}
 .line_banner_03 article a img {}
 
-.main_bottom {}
-.main_bottom article {}
-.main_bottom article div {}
+.main_bottom {
+    width: 100%;
+    margin: 100px 0 50px 0;
+}
+.main_bottom article {overflow: hidden;}
+.main_bottom article div {float: left;}
 .main_bottom article div.main_bottom_left {}
-.main_bottom article div.main_bottom_center {}
-.main_bottom article div.main_bottom_right {}
+.main_bottom article div.main_bottom_center {margin: 0px 2px;}
+.main_bottom article div.main_bottom_right {
+    height: 268px;
+    border: 1px solid #dbdbdb;
+    float: left;
+    width: 304px;
+}
 .main_bottom article div.main_bottom_right ul {}
+.main_bottom article div.main_bottom_right li.notice {
+    height: 125px;
+    padding: 16px 16px 0px 19px;
+}
+.main_bottom article div.main_bottom_right li.notice .left {float: left;}
+.main_bottom article div.main_bottom_right li.notice .right {float: right;}
+
+.main_bottom article div.main_bottom_right li.callcenter {
+    border-top: 1px dotted #bfbebe;
+    box-sizing: border-box;
+}
 .main_bottom article div.main_bottom_right ul li {}
+.main_bottom article div.main_bottom_right ul li > dl {}
+.main_bottom article div.main_bottom_right ul li > dl > dt {
+    width: 100%;
+    margin-bottom: 20px;
+}
