--- a/dmall/css/style_goods.css
+++ b/dmall/css/style_goods.css
@@ -76,21 +76,30 @@ section > div.content_goods {}
 .content_goods ul li.goods_info_left {
     float: left;
     width: 400px;
-}
-.content_goods ul li.goods_info_left > div {}
-.content_goods ul li.goods_info_left > div.goods_info_img {
     position: relative;
-    margin: 28px 40px 0 42px;
+    margin-top: 28px;
+    box-sizing: border-box;
+    text-align: center;
 }
+/* div 중앙정렬 - div 를 겹쳐잡고 안쪽 div에 inlune-block 속성 주기*/
+.content_goods ul li.goods_info_left > div {display: inline-block;}
+.content_goods ul li.goods_info_left > div.goods_info_img {}
 .content_goods ul li.goods_info_left > div > img {
-    width: 342px;
-    height: 342px;
+    width: 350px;
+    height: 350px;
 }
-.content_goods ul li.goods_info_left > div.goods_info_box {}
+.content_goods ul li.goods_info_left > div.goods_info_box {
+    margin-top: 10px;
+    overflow: hidden;
+}
 .content_goods ul li.goods_info_left > div.goods_info_box img {
     width: 63px;
     height: 63px;
+    float: left;
+    margin-left: 8px;
 }
+.content_goods ul li.goods_info_left > div.goods_info_box img:first-of-type {margin:0}
+
 /* 별점부분 */
 .content_goods li.goods_info_left > div.goods_info_bottom {margin-top:15px;}
 .content_goods .goods_info_bottom > div.goods_info_bottom_star {
@@ -122,8 +131,6 @@ section > div.content_goods {}
     border: 1px solid #a9a9a9;
     box-sizing: border-box;
 }
-
-
 
 /* 상품설명란 우측 옵션 부분 */
 .content_goods ul li.goods_info_right {
@@ -307,18 +314,193 @@ section > div.content_goods {}
     margin-right: 7px;
     background-image: url(/dmall/img/btns/cate_main_promotion_right_on.png);
 }
-.goods_minishop .slider > div > a > dt {}
-.goods_minishop .slider > div > a > dt > img {width: 130px; height: 130px;}
-.goods_minishop .slider > div > a > dl {}
-.goods_minishop .slider > div > a > dl > p {}
-.goods_minishop .slider > div > a > dl > p > strong {}
-
+.goods_minishop .slider > div > a  {}
+.goods_minishop .slider > div a dl {}
+.goods_minishop .slider > div a dl dt {}
+.goods_minishop .slider > div a dl dd {}
+/* 슬라이더 내부 이미지 */
+.goods_minishop .slider > div img {width: 130px; height: 130px;}
+.goods_minishop .slider > div p {line-height: 150%;}
+.goods_minishop .slider > div strong {font-weight: bold; color:#000;}
 
 
 /* 하단 상세페이지 */
-.content_goods div.goods_detail {
-    padding-top:40px;
-    border:1px solid red;
-}
 .content_goods div.goods_detail {}
+.goods_detail > article > div {padding-top:40px;}
+
+/* 카테고리 */
+.goods_detail > article > div.tabs {overflow: hidden;}
+.goods_detail > article > div.tabs > ul {
+    float: left;
+    overflow: hidden;
+}
+.goods_detail > article > div.tabs > ul > li {float: left;}
+.goods_detail .tabs li:nth-of-type(1) {background-image: url(../img/btns/detail_tab01.gif);}
+.goods_detail .tabs li:nth-of-type(2) {background-image: url(../img/btns/detail_tab02.gif);}
+.goods_detail .tabs li:nth-of-type(3) {background-image: url(../img/btns/detail_tab03.gif);}
+.goods_detail .tabs li:nth-of-type(4) {background-image: url(../img/btns/detail_tab04.gif);}
+.goods_detail .tabs li:nth-of-type(5) {background-image: url(../img/btns/detail_tab05.gif);}
+.goods_detail .tabs li:nth-of-type(1).on {background-image: url(../img/btns/detail_tab01_on.gif);}
+.goods_detail .tabs li:nth-of-type(2).on {background-image: url(../img/btns/detail_tab02_on.gif);}
+.goods_detail .tabs li:nth-of-type(3).on {background-image: url(../img/btns/detail_tab03_on.gif);}
+.goods_detail .tabs li:nth-of-type(4).on {background-image: url(../img/btns/detail_tab04_on.gif);}
+.goods_detail .tabs li:nth-of-type(5).on {background-image: url(../img/btns/detail_tab05_on.gif);}
+.goods_detail .tabs li > a {
+    display: block;
+    width: 210px;
+    height: 46px;
+    line-height: 50px;
+    font-size: 8px;
+    text-align: center;
+}
+.goods_detail .tabs li > a > span {
+    font-weight: bold;
+    font-size: 10px;
+}
+
+
+/* 상세정보 (카테고리에 맞춰 이하 디테일란이 바뀐다) */
+.goods_detail > article > div.wrap {}
+.goods_detail .wrap > ul {overflow: hidden;}
+.goods_detail .wrap > ul > li {
+    float: left;
+    margin-left: 26px;
+}
+.goods_detail .wrap > ul > li:first-of-type {margin-left: 0;}
+.goods_detail .wrap > ul > li > img {}
+
+/* 디테일 페이지 내 테이블 규격 */
+.goods_detail .wrap h3 {
+    margin: 0 0 10px 14px;
+    padding-top: 40px;
+    font-size: 12px;
+}
+.goods_detail .wrap table {
+    border-top: solid 1px #ddd;
+    width:100%;
+}
+.goods_detail .wrap table tr {}
+.goods_detail .wrap table tr td:first-of-type {
+    background: #f6f6f6;
+    width: 210px;
+}
+.goods_detail .wrap table tr td {
+    border-bottom: solid 1px #ddd;
+    padding: 9px 12px;
+    font-size: 11px;
+    line-height: 140%;
+    text-align: left;
+}
+
+.goods_detail .wrap > div.main {
+    padding-top: 40px;
+    text-align: center;
+}
+.goods_detail .wrap > div.return {}
+
+/* 관련상품 */
+.goods_detail > article > div.related {
+    margin: 22px 0 0 0;
+    width: 100%;
+}
+.goods_detail .related > ul {overflow: hidden;}
+.goods_detail .related > ul > li {
+    float: left;
+    line-height: 140%;
+    width: 145px;
+    vertical-align: top;
+    margin-left: 30px;
+}
+.goods_detail .related > ul > li:first-of-type {margin-left: 12px;}
+.goods_detail .related > ul > li > img {
+    width: 145px;
+    height: 145px;
+}
+.goods_detail .related > ul > li span {
+    display: inline-block;
+    font-weight: bold;
+    padding-top: 5px;
+}
+
+
+/* 상품평가란 */
+.goods_detail > article > div.reviews {}
+
+/* 상품페이지 내 테이블 규격 */
+.goods_detail > article > div > h3 {
+    padding: 10px 10px 10px 13px;
+    font-weight: bold;
+    font-size: 13px;
+}
+.goods_detail > article > div > table {width:100%;}
+.goods_detail > article > div > table tr {}
+.goods_detail > article > div > table tr > th {
+    height: 31px;
+    border-top: solid 1px #828282;
+    border-bottom: solid 1px #e7e5e5;
+    color: #7b7b7b;
+}
+.goods_detail > article > div > table tr > th:nth-of-type(1) {width:auto;}
+.goods_detail > article > div > table tr > th:nth-of-type(2) {width:130px;}
+.goods_detail > article > div > table tr > th:nth-of-type(3) {width:110px;}
+.goods_detail > article > div > table tr > th:nth-of-type(4) {width:130px;}
+.goods_detail > article > div > table tr > td {
+    padding: 12px 14px;
+    border-bottom: solid 1px #e7e5e5;
+    height: 39px;
+    color: #7b7b7b;
+    text-align: center;
+    line-height: 150%;
+}
+.goods_detail > article > div > table tr > td dl {overflow: hidden;}
+.goods_detail > article > div > table tr > td dl dt {
+    float: left;
+}
+.goods_detail > article > div > table tr > td dl dt img {
+    width:88px; 
+    height: 88px;
+    border: 1px solid #e6e6e6;
+}
+.goods_detail > article > div > table tr > td dl dd {
+    float: left;
+    padding-left: 14px;
+    text-align: left;
+    line-height: 100%;
+}
+.goods_detail > article > div > table tr > td dl dd p {
+    color: red;
+    font-size: 13px;
+    margin-top: 5px;
+}
+.goods_detail > article > div > table tr > td dl dd span {font-weight: bold;}
+
+
+
+/* 질문과답변 */
+.goods_detail > article > div.qna {}
+.goods_detail > article > div.qna span {
+    margin-left: 20px;
+    font-size: 11px;
+    font-weight: normal;
+}
+.goods_detail > article > div.qna td {height: auto;}
+.goods_detail > article > div.qna td:first-of-type {text-align: left;}
+.goods_detail > article > div.qna td:first-of-type img {
+    vertical-align: middle;
+}
+.goods_detail > article > div.qna td:first-of-type span {
+    margin-left: 19px;
+    font-size: 12px;
+    font-weight: bold;
+}
+.goods_detail > article > div.qna td:last-of-type span {
+    display: block;
+    width: 45px;
+    height: 18px;
+    margin: 0 auto;
+    background-image: url(../img/icon/reply_complete.gif);
+}
+
+/* 정책및공지 */
+.goods_detail > article > div.notice {margin-bottom: 40px;}
 
