--- a/dmall/css/style_footer.css
+++ b/dmall/css/style_footer.css
@@ -51,6 +51,12 @@ footer {margin-bottom: 50px;}
     padding-top: 32px;
     text-align: center;
 }
+.footer_desc article div.footer_logo img {
+    width: 138px;
+    height: 35px;
+    opacity: 0.5; 
+    filter: alpha(opacity=50);
+}
 .footer_desc article div.company_info {
     width: 653px;
     padding: 20px 0 0 0;
